(prologue_set_got, prologue_get_pc): Add UNSPEC_VOLATILE to pattern. (prologue_get_pc_and_set_got): New pattern.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16308 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -6515,9 +6515,10 @@ byte_xor_operation:
 
 (define_insn "prologue_set_got"
   [(set (match_operand:SI 0 "" "")
-    (plus:SI (match_dup 0)
-     (plus:SI (match_operand:SI 1 "symbolic_operand" "")
-      (minus:SI (pc) (match_operand 2 "" "")))))]
+	(unspec_volatile
+	 [(plus:SI (match_dup 0)
+		   (plus:SI (match_operand:SI 1 "symbolic_operand" "")
+			    (minus:SI (pc) (match_operand 2 "" ""))))] 1))]
   ""
   "*
 {
@@ -6538,7 +6539,7 @@ byte_xor_operation:
 
 (define_insn "prologue_get_pc"
   [(set (match_operand:SI 0 "" "")
-    (plus:SI (pc) (match_operand 1 "" "")))]
+    (unspec_volatile [(plus:SI (pc) (match_operand 1 "" ""))] 2))]
   ""
   "*
 {
@@ -6549,6 +6550,20 @@ byte_xor_operation:
     {
       ASM_OUTPUT_INTERNAL_LABEL (asm_out_file, \"L\", CODE_LABEL_NUMBER (operands[1]));
     }    
+  RET;
+}")
+
+(define_insn "prologue_get_pc_and_set_got"
+  [(unspec_volatile [(match_operand:SI 0 "" "")] 3)]
+  ""
+  "*
+{
+  operands[1] = gen_label_rtx ();
+  output_asm_insn (AS1 (call,%P1), operands);
+  ASM_OUTPUT_INTERNAL_LABEL (asm_out_file, \"L\",
+			     CODE_LABEL_NUMBER (operands[1]));
+  output_asm_insn (AS1 (pop%L0,%0), operands);
+  output_asm_insn (\"addl $_GLOBAL_OFFSET_TABLE_+[.-%P1],%0\", operands);
   RET;
 }")
 
