--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,11 +1,13 @@
-Sun Oct 19 09:13:01 1997  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+Sun Oct 26 01:28:29 1997  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* typeck.c (rationalize_conditional_expr): Handle {MIN,MAX}_EXPR.
 	(unary_complex_lvalue): Call it for {MIN,MAX}_EXPR.
 
 	* decl.c (init_decl_processing): Call using_eh_for_cleanups.
 
-	* Make-lang.in (g++): Include prefix.o.
+Sun Oct 26 01:52:52 1997  Jeffrey A Law  (law@cygnus.com)
+
+	* Makefile.in (g++): Depend on prefix.o.  Link in prefix.o.
 
 Thu Oct 23 02:01:30 1997  Jason Merrill  <jason@yorick.cygnus.com>
 
