Make-lang.in (c++.distdir): Make inc subdirectory.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16410 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov  9 18:00:26 1997  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* Make-lang.in (c++.distdir): Make inc subdirectory.
+
 Fri Nov  7 11:57:28 1997  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* decl2.c (finish_file): Put back some code.
