Fix splitting DF constants
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16455 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -5734,16 +5734,16 @@
   "
 {
   int endian = (WORDS_BIG_ENDIAN == 0);
+  long l[2];
+  REAL_VALUE_TYPE rv;
+
+  REAL_VALUE_FROM_CONST_DOUBLE (rv, operands[1]);
+  REAL_VALUE_TO_TARGET_DOUBLE (rv, l);
+
   operands[2] = operand_subword (operands[0], endian, 0, DFmode);
   operands[3] = operand_subword (operands[0], 1 - endian, 0, DFmode);
-
-#ifdef HOST_WORDS_BIG_ENDIAN
-  operands[4] = GEN_INT (CONST_DOUBLE_LOW  (operands[1]));
-  operands[5] = GEN_INT (CONST_DOUBLE_HIGH (operands[1]));
-#else
-  operands[4] = GEN_INT (CONST_DOUBLE_HIGH (operands[1]));
-  operands[5] = GEN_INT (CONST_DOUBLE_LOW  (operands[1]));
-#endif
+  operands[4] = GEN_INT (l[endian]);
+  operands[5] = GEN_INT (l[1 - endian]);
 }")
 
 (define_split
@@ -5762,16 +5762,15 @@
   HOST_WIDE_INT high;
   HOST_WIDE_INT low;
   int endian = (WORDS_BIG_ENDIAN == 0);
+  long l[2];
+  REAL_VALUE_TYPE rv;
   rtx high_reg = operand_subword (operands[0], endian, 0, DFmode);
   rtx low_reg  = operand_subword (operands[0], 1 - endian, 0, DFmode);
 
-#ifdef HOST_WORDS_BIG_ENDIAN
-  high = CONST_DOUBLE_LOW  (operands[1]);
-  low  = CONST_DOUBLE_HIGH (operands[1]);
-#else
-  high = CONST_DOUBLE_HIGH (operands[1]);
-  low  = CONST_DOUBLE_LOW  (operands[1]);
-#endif
+  REAL_VALUE_FROM_CONST_DOUBLE (rv, operands[1]);
+  REAL_VALUE_TO_TARGET_DOUBLE (rv, l);
+  high = l[endian];
+  low  = l[1 - endian];
 
   if (((unsigned HOST_WIDE_INT) (low + 0x8000) < 0x10000)
       || (low & 0xffff) == 0)
@@ -5806,9 +5805,16 @@
    (set (match_dup 3) (ior:SI (match_dup 3) (match_dup 7)))]
   "
 {
-  HOST_WIDE_INT high = CONST_DOUBLE_HIGH (operands[1]);
-  HOST_WIDE_INT low  = CONST_DOUBLE_LOW  (operands[1]);
+  HOST_WIDE_INT high;
+  HOST_WIDE_INT low;
+  long l[2];
+  REAL_VALUE_TYPE rv;
   int endian = (WORDS_BIG_ENDIAN == 0);
+
+  REAL_VALUE_FROM_CONST_DOUBLE (rv, operands[1]);
+  REAL_VALUE_TO_TARGET_DOUBLE (rv, l);
+  high = l[endian];
+  low  = l[1 - endian];
 
   operands[2] = operand_subword (operands[0], endian, 0, DFmode);
   operands[3] = operand_subword (operands[0], 1 - endian, 0, DFmode);
