(call insns): If -fPIC or -mrelocatable, add @plt suffix to calls.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16749 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7580,7 +7580,7 @@
   else if (INTVAL (operands[2]) & CALL_V4_CLEAR_FP_ARGS)
     output_asm_insn (\"creqv 6,6,6\", operands);
 
-  return (flag_pic == 1) ? \"bl %z0@plt\" : \"bl %z0\";
+  return flag_pic ? \"bl %z0@plt\" : \"bl %z0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "4,8")])
@@ -7650,7 +7650,7 @@
   else if (INTVAL (operands[3]) & CALL_V4_CLEAR_FP_ARGS)
     output_asm_insn (\"creqv 6,6,6\", operands);
 
-  return (flag_pic == 1) ? \"bl %z1@plt\" : \"bl %z1\";
+  return flag_pic ? \"bl %z1@plt\" : \"bl %z1\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "4,8")])
