* except.c (expand_start_catch_block): We only need the rethrow region for non-sjlj exceptions. (expand_end_catch_block): Likewise.  Use outer_context_label_stack.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16796 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+Thu Nov 27 08:26:56 1997  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* except.c (expand_start_catch_block): We only need the rethrow
+ 	region for non-sjlj exceptions.
+	(expand_end_catch_block): Likewise.  Use outer_context_label_stack.
+
 Wed Nov 26 15:13:48 1997  Jeffrey A Law  (law@cygnus.com)
 
 	* lex.c (lang_init): Enable flag_exceptions by default if no
