Fix spelling errors.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16917 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -221,7 +221,7 @@
   int shift;
 
   /* In all cases we will emit two instructions.  However we try to
-     use 2 byte instructions whereever possible.  We can assume the
+     use 2 byte instructions wherever possible.  We can assume the
      constant isn't loadable with any of ldi, ld24, or seth.  */
 
   /* See if we can load a 24 bit unsigned value and invert it.  */
@@ -265,7 +265,7 @@
 ;; [then seth + ld/st would work for any object in the area].  Doing this
 ;; would require special handling of _SDA_BASE_ (its value would be
 ;; (.sdata + 32K) & 0xffff0000) and reloc computations would be different
-;; [I think].  What to do about this is defered until later and for now we
+;; [I think].  What to do about this is deferred until later and for now we
 ;; require .sdata to be in the first 16M.
 
 (define_expand "movsi_sda"
@@ -901,7 +901,7 @@
 ;;
 ;; On the m32r it is more efficient to use the bxxz instructions and
 ;; thus merge the compare and branch into one instruction, so they are
-;; prefered.
+;; preferred.
 
 (define_expand "cmpsi"
   [(set (reg:CC 17)
